--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,10 @@ description: Just another documentation theme compatible with GitHub Pages
 
 theme: null
 
+google:
+  gtag: GTM-PPSNGX6
+  adsense:
+
 debug:
   compress: true
 #   dist: false
